--- a/aboutme.html
+++ b/aboutme.html
@@ -4,3 +4,10 @@ hi, this is amy! ._.
   <head>
     <title>About Me</title>
   </head>
+  
+  <body>
+    <h1>Hello</h1
+      <p>just testing somr stuff out. it is kind of confusing but it is a learning process sooo...</p>
+      <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjU4or__JDVAhVDLSYKHaiKAfoQjRwIBw&url=https%3A%2F%2Fwww.askideas.com%2F21-best-funny-birds-pictures%2F&psig=AFQjCNG98kEdNzvpAFvq1GqnZKEz4gG6pA&ust=1500403566090430"></img>
+  </body>
+</html>
