--- a/aboutme.html
+++ b/aboutme.html
@@ -1,13 +1,22 @@
 hi, this is amy! ._.
 
 <html>
-  <head>
-    <title>About Me</title>
-  </head>
+    <head>
+      <title>About Me</title>
+    </head>
   
-  <body>
-    <h1>Hello</h1
-      <p>just testing somr stuff out. it is kind of confusing but it is a learning process sooo...</p>
-      <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjU4or__JDVAhVDLSYKHaiKAfoQjRwIBw&url=https%3A%2F%2Fwww.askideas.com%2F21-best-funny-birds-pictures%2F&psig=AFQjCNG98kEdNzvpAFvq1GqnZKEz4gG6pA&ust=1500403566090430"></img>
-  </body>
+   <body>
+      <h1>Hello</h1
+        <p>currently learning how to internet</p>
+        <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjU4or__JDVAhVDLSYKHaiKAfoQjRwIBw&url=https%3A%2F%2Fwww.askideas.com%2F21-best-funny-birds-pictures%2F&psig=AFQjCNG98kEdNzvpAFvq1GqnZKEz4gG6pA&ust=1500403566090430"></img>
+   </body>
+  <style>
+    body {
+      background-color: 99ccff;
+    }
+    h1 {
+      color: blue;
+    }
+  </style>
+
 </html>
