--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@ hi, this is amy! ._.
    <body>
       <h1>Hello</h1
         <p>currently learning how to internet</p>
-        <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjU4or__JDVAhVDLSYKHaiKAfoQjRwIBw&url=https%3A%2F%2Fwww.askideas.com%2F21-best-funny-birds-pictures%2F&psig=AFQjCNG98kEdNzvpAFvq1GqnZKEz4gG6pA&ust=1500403566090430"></img>
+        <img src="http://1.bp.blogspot.com/-pstC0UtrnTU/UQQhdzL-i-I/AAAAAAAAALA/0tqkZaCs7hg/s1600/funny+birds,+animal3.JPG></img>
    </body>
   <style>
     body {
