--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@ hi, this is amy! ._.
    <body>
       <h1>Hello</h1
         <p>currently learning how to internet</p>
-        <img src="http://1.bp.blogspot.com/-pstC0UtrnTU/UQQhdzL-i-I/AAAAAAAAALA/0tqkZaCs7hg/s1600/funny+birds,+animal3.JPG></img>
+        <img src="http://1.bp.blogspot.com/-pstC0UtrnTU/UQQhdzL-i-I/AAAAAAAAALA/0tqkZaCs7hg/s1600/funny+birds,+animal3.JPG"></img>
    </body>
   <style>
     body {
