--- a/aboutme.html
+++ b/aboutme.html
@@ -13,9 +13,13 @@ hi, this is amy! ._.
   <style>
     body {
       background-color: 99ccff;
+      font-family: fantasy;
     }
     h1 {
-      color: blue;
+      color: blue
+    }
+    img{
+        border: 10px white
     }
   </style>
 
