--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@ hi, this is amy! ._.
     </head>
   
    <body>
-      <h1>Hello</h1
+      <h1>About Me</h1
         <p>currently learning how to internet</p>
         <img src="http://1.bp.blogspot.com/-pstC0UtrnTU/UQQhdzL-i-I/AAAAAAAAALA/0tqkZaCs7hg/s1600/funny+birds,+animal3.JPG"></img>
    </body>
