--- a/aboutme.html
+++ b/aboutme.html
@@ -16,10 +16,10 @@ hi, this is amy! ._.
       font-family: fantasy;
     }
     h1 {
-      color: blue
+      color: blue;
     }
     img{
-        border: 10px white
+        border: 10px solid white;
     }
   </style>
 
