--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,3 @@
-hi, this is amy! ._.
-
 <html>
     <head>
       <title>About Me</title>
@@ -7,7 +5,7 @@ hi, this is amy! ._.
   
    <body>
       <h1>About Me</h1
-        <p>currently learning how to internet</p>
+        <p>Hi, I'm Amy. I am 16 years old and going into my senior year of high school. I am currently doing a program called Girls Who Code which is teaching me computer sciene as such. A few things I really enjoy are playing volleyball, fashion, travelling and reading.</p>
         <img src="http://1.bp.blogspot.com/-pstC0UtrnTU/UQQhdzL-i-I/AAAAAAAAALA/0tqkZaCs7hg/s1600/funny+birds,+animal3.JPG"></img>
    </body>
   <style>
