--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
           Some of my dislikes include pickles and rude people. </p>
         <img src="http://1.bp.blogspot.com/-pstC0UtrnTU/UQQhdzL-i-I/AAAAAAAAALA/0tqkZaCs7hg/s1600/funny+birds,+animal3.JPG"></img>
         <p>Fun Fact: I used to be such a tomboy and still kind of am, it just doesn't look like it anymore. It still surprises my friends.</p>
-        <img srs="
+        <img src="escapebot.jpg>
    </body>
   <style>
     body {
