--- a/aboutme.html
+++ b/aboutme.html
@@ -6,16 +6,16 @@
    <body>
       <h1>About Me</h1
         <p>Hi, I'm Amy. I am 16 years old and going into my senior year of high school. 
-          I am currently doing a program called Girls Who Code which is teaching me computer sciene as such. 
+          I am currently doing a program called Girls Who Code which is teaching me computer sciene. 
           A few things I really enjoy are playing volleyball, fashion, travelling and reading. 
           Some of my dislikes include pickles and rude people. </p>
+       
         <img src="http://1.bp.blogspot.com/-pstC0UtrnTU/UQQhdzL-i-I/AAAAAAAAALA/0tqkZaCs7hg/s1600/funny+birds,+animal3.JPG"></img>
-        <p>Fun Fact: I used to be such a tomboy and still kind of am, it just doesn't look like it anymore. It still surprises my friends.</p>
         <img src="escapebot.jpg>
    </body>
   <style>
     body {
-      background-color: 99ccff;
+      background-color: blue;
       font-family: fantasy;
     }
     h1 {
