--- a/aboutme.html
+++ b/aboutme.html
@@ -10,12 +10,11 @@
           A few things I really enjoy are playing volleyball, fashion, travelling and reading. 
           Some of my dislikes include pickles and rude people. </p>
        
-        <img src="http://1.bp.blogspot.com/-pstC0UtrnTU/UQQhdzL-i-I/AAAAAAAAALA/0tqkZaCs7hg/s1600/funny+birds,+animal3.JPG"></img>
         <img src="https://ih0.redbubble.net/image.270467030.4565/flat,1000x1000,075,f.u2.jpg"></img>
    </body>
   <style>
     body {
-      background-color: blue;
+      background-color: #b3ccff;
       font-family: fantasy;
     }
     h1 {
