--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,7 @@
     <head>
       <title>About Me</title>
     </head>
+    text-align: center;
   
    <body>
       <h1>About Me</h1
@@ -9,8 +10,9 @@
           I am currently doing a program called Girls Who Code which is teaching me computer sciene. 
           A few things I really enjoy are playing volleyball, fashion, travelling and reading. 
           Some of my dislikes include pickles and rude people. </p>
+          text-align: center;
        
-        <img src="https://ih0.redbubble.net/image.270467030.4565/flat,1000x1000,075,f.u2.jpg"></img>
+        <img src="https://ih0.redbubble.net/image.270467030.4565/flat,1000x1000,075,f.u2.jpg" width"500" height 400></img>
    </body>
   <style>
     body {
