--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
       font-family: fantasy;
     }
     h1 {
-      color: blue;
+      color: white;
     }
     img{
         border: 10px solid white;
